@@ -1,6 +1,6 @@
-VIRTUALIP_CGI_VERSION:=0.4
+VIRTUALIP_CGI_VERSION:=0.4.1
 VIRTUALIP_CGI_PKG_SOURCE:=virtualip-cgi-$(VIRTUALIP_CGI_VERSION)-dsmod.tar.bz2
-VIRTUALIP_CGI_PKG_SITE:=http://fritzbox.ingmars-bastelecke.net/dsmod/pakete
+VIRTUALIP_CGI_PKG_SITE:=http://scrum-master.de/download/dsmod
 
 
 $(DL_DIR)/$(VIRTUALIP_CGI_PKG_SOURCE):
@@ -15,7 +15,7 @@ virtualip-cgi: $(PACKAGES_DIR)/.virtualip-cgi-$(VIRTUALIP_CGI_VERSION)
 virtualip-cgi-package: $(PACKAGES_DIR)/.virtualip-cgi-$(VIRTUALIP_CGI_VERSION)
 	tar -C $(PACKAGES_DIR) $(VERBOSE) --exclude .svn -cjf $(PACKAGES_BUILD_DIR)/$(VIRTUALIP_CGI_PKG_SOURCE) virtualip-cgi-$(VIRTUALIP_CGI_VERSION)
 
-virtualip-cgi-precompiled:
+virtualip-cgi-precompiled: virtualip-cgi
 
 virtualip-cgi-source: $(PACKAGES_DIR)/.virtualip-cgi-$(VIRTUALIP_CGI_VERSION)
 
